# RLHFT

./: Main.ipynb  README.md  RL-EnergyFutures_python.ipynb  pyproject.toml
configs/: es_nq.yaml
notebooks/: exploration.ipynb
outputs/debug_compare/: df_input.csv  regime_state_a.csv  regime_state_b.csv  run_config_summary.csv  signal_confidence_a.csv  signal_confidence_b.csv  test_actions.csv  test_inventory.csv  test_pnl.csv  train_pnl.csv
rlhft/: __init__.py
scripts/: compare_debug_exports.py
src/rlhft/: __init__.py  config.py
src/rlhft/data/: kdb.py  loaders.py
src/rlhft/evaluation/: analysis.py  metrics.py  xgb_backtest.py  xrl_analysis.py
src/rlhft/features/: pca_signal.py  zscore.py
src/rlhft/models/: q_learning.py  rule_extraction.py  xgb_inventory.py
src/rlhft/pipeline/: multiday.py  oneday.py  runner.py
src/rlhft/strategies/: rl_strategy.py  rule_based.py
src/rlhft/visualization/: dashboard.py  diagnostics.py  partition_tree.py  pnl_plots.py  position_plots.py  price_plots.py  rule_tree.py  xgb_plots.py  xrl_plots.py
